Add Export to CSV

--- a/data/viewer.html
+++ b/data/viewer.html
@@ -319,9 +319,10 @@
       <!-- Section 3: Downloads -->
       <div class="control-section">
         <div class="input-group">
-          <label>Download:</label>
+          <label>Export:</label>
           <div class="btn-group">
             <button class="button" onclick="downloadAsJSON()" id="download-btn" disabled>JSON</button>
+            <button class="button" onclick="downloadAsCSV()" id="download-csv-btn" disabled>CSV</button>
             <button class="button online-only" onclick="downloadBinFile()" id="download-bin-btn" disabled>BIN</button>
           </div>
         </div>
